# AgentTrek

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_exp.py
scripts/: run_miniwob.sh  run_webarena.sh
