[project]
name = "agenttrek"
version = "0.1.0"
description = "AgentTrek"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentlab>=0.3.2",
    "openai>=1.59.9",
    "playwright==1.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
]

[tool.ruff]
target-version = 'py310'
line-length = 120  # Must agree with Black
